<resources>
    <string name="app_name">PMS</string>
    <string name="prompt_email">Email</string>
    <string name="inquiry">Enter the inquiry here..</string>
    <string name="request">Enter brief note..</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="pass1">Password</string>
    <string name="pass2">Confirm Password</string>
    <string name="name_error">Please enter your Username</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="password_dont_match_error">Passwords dont match</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="junk">  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vestibulum orci a sapien imperdiet
                maximus. Suspendisse vel ex eget mauris efficitur finibus eu a enim. Aenean tellus neque, consectetur
                sit amet lacus a, hendrerit ornare urna. Fusce venenatis lorem vitae augue suscipit, eu tempor massa
                vulputate. Praesent iaculis velit libero, vel faucibus sem pulvinar vel. Curabitur viverra nisl dui, a
                venenatis felis pellentesque id. Donec non lacus diam.</string>


    <string name="itemName">Item Name</string>
    <string name="itemName_error">Please enter item name</string>
    <string name="itemDes">Item Note</string>
    <string name="rejDes">Reason for rejecting</string>
    <string name="itemDes_error">Enter Short Note</string>
    <string name="itemCategory">Category</string>
    <string name="itemCategory_error">Select Category</string>
    <string name="itemQuantity">Quantity</string>
    <string name="itemQuantity_error">Provide Quantity</string>
    <string name="itemPrice">Price</string>
    <string name="itemPrice_error">Provide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resetPassContext">Enter your email associated with your account and we will send an email with instructions to reset the password. </string>
    <string name="validateOtp">Check your email inbox for the OTP number sent to you. Validate the OTP number below.</string>
    <string name="title_activity_admin_nd">AdminND</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>