<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/drawer_layout_admin"
tools:context=".ManageItemRequest">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/main_toolbar_admin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemName_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:hint="@string/itemName"
        android:layout_marginTop="17dp">

        <EditText
            android:id="@+id/etItemNameMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:gravity="center"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemDes_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:hint="@string/itemDes"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/etDesMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:textSize="19sp"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemCategory_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:hint="Select Category"
        >

        <Spinner
            android:id="@+id/spinnerCategoryMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:gravity="center"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemQuantity_error"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="19dp"
            android:hint="@string/itemQuantity"
            android:layout_marginStart="5dp"
            android:padding="10dp"
            >

            <EditText
                android:id="@+id/etQuantityMI"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:textSize="19sp"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemPrice_error"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:padding="10dp"
            android:hint="@string/itemPrice"
            android:layout_toEndOf="@+id/itemQuantity_error">

            <EditText
                android:id="@+id/etPriceMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:inputType="number"
                android:textSize="19sp"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>
    <Button
        android:id="@+id/btnAddItemMI"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/azure"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:cornerRadius="20dp"
        android:text="Add Item" />

</LinearLayout>

<RelativeLayout
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@android:color/white">

    <include
        layout="@layout/main_nd_admin"/>
</RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>